# python-blueprint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml  pr-title-checker-config.json  pull_request_template.md  release-drafter.yml
.github/workflows/: build-docs.yml  claude-review.yml  pr-manager.yml  release-drafer.yml  test.yml  tester.yml
docs/: mkdocs.yml  release_notes.j2
docs/templates/: release_notes.j2
tests/: conftest.py
