[project]
name = "python-blueprint"
version = "0.0.0"
description = "A python blueprint to configure projects."
authors = [{ name = "Evangelos Michelioudakis", email = "vagmcs@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = []
classifiers = ["Private :: Do Not Upload"]
dependencies = []


[project.urls]
homepage = "https://github.com/vagmcs/python-blueprint"
repository = "https://github.com/vagmcs/python-blueprint"
documentation = "https://github.com/vagmcs/python-blueprint"


[tool.hatch.build.targets.wheel]
packages = ["project"]


[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "commitizen>=4.13.9",
    "hypothesis>=6.151.9",
    "ipykernel>=7.2.0",
    "mkdocs>=1.6.1",
    "poethepoet>=0.42.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.6",
    "sqlfluff>=4.0.4",
]


[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "recommended"
failOnWarnings = false
reportMissingImports = "warning"
reportMissingModuleSource = "warning"


[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".ipynb_checkpoints"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "I", "UP"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
import-heading = {future = "Futures", standard-library = "Standard Library", third-party = "Dependencies", first-party = "Project"}


[tool.pytest.ini_options]
addopts = "--capture=no --doctest-modules --cov=project --no-cov-on-fail"
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "DONT_ACCEPT_TRUE_FOR_1",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.coverage.run]
data_file = "coverage/.coverage"


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
template = "docs/templates/changelog.j2"
changelog_file = "docs/docs/changelog.md"
release_notes_file = "docs/docs/release_notes.md"


[tool.sqlfluff.core]
dialect = "ansi"
max_line_length = 120

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.poe]
verbosity = -1

[tool.poe.env]
PROJECT_NAME = "project"
RELEASE_NOTES_FILE = "docs/docs/release_notes.md"

[tool.poe.tasks._project_version]
shell = "python -c \"import importlib.metadata; print(importlib.metadata.metadata('python-blueprint')['Version'])\""

[tool.poe.tasks.clean]
help = "Clean build artifacts"
script = "poethepoet.scripts:rm('dist', 'docs/site')"

[tool.poe.tasks.format]
help = "Format source code"
shell = """
    uv run ruff format notebooks ${PROJECT_NAME} tests
    uv run sqlfluff fix sql
"""

[tool.poe.tasks.lint]
help = "Run linter and type checker"
shell = """
    uv run ruff check --fix ${PROJECT_NAME} tests notebooks
    uv run basedpyright ${PROJECT_NAME} tests notebooks
"""

[tool.poe.tasks.test]
help = "Run tests"
cmd = "uv run pytest"

[tool.poe.tasks.package]
help = "Package project"
cmd = "uv build"

[tool.poe.tasks.build-docs]
help = "Build documentation"
cmd = "uv run mkdocs build -f docs/mkdocs.yml"

[tool.poe.tasks.build]
help = "Run tests, build docs and package"
sequence = ["test", "package", "build-docs"]

[tool.poe.tasks.local-docs]
help = "Run local documentation server"
sequence = ["build", "_serve_docs"]

[tool.poe.tasks._serve_docs]
cmd = "uv run mkdocs serve -f docs/mkdocs.yml"

[tool.poe.tasks.bump]
help = "Bump version and generate changelog (use -- --increment PATCH|MINOR|MAJOR)"
shell = """
    uv run cz changelog --template docs/templates/release_notes.j2 --file-name ${RELEASE_NOTES_FILE}
    uv run cz bump --yes
"""


[tool.poe.tasks.publish]
cmd = "uv publish"

[tool.poe.tasks.deploy_docs]
cmd = "uv run mkdocs gh-deploy"

[tool.poe.tasks.gh-release]
uses = { PROJECT_VERSION = "_project_version" }
shell = """
    gh release create \
        --verify-tag ${PROJECT_VERSION} \
        --notes-file ${RELEASE_NOTES_FILE} \
        dist/${PROJECT_NAME}-${PROJECT_VERSION}.tar.gz \
        dist/${PROJECT_NAME}-${PROJECT_VERSION}-py3-none-any.whl
    """

[tool.poe.tasks.release]
help = "Release the package and documentation"
sequence = ["build", "publish", "deploy_docs", "gh-release"]
